# mistral-python-api

./: .gitignore  README.md  main.py  pyproject.toml
routes/: papers.py  router.py  user.py
schemas/: paper.py
utils/: db.py  logging_config.py  mistral_client.py  rss.py  settings.py
