[project]
name = "mistral-python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.121.0",
    "feedparser>=6.0.12",
    "mistralai>=1.9.11",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
]
